--- a/components/loanforms.html
+++ b/components/loanforms.html
@@ -147,7 +147,7 @@
             var titleText = `<div class="col">
                                 <div class="loantype-title">    
                                     <div class="">
-                                        <a href="" onclick="showAllLoans();return false;" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
+                                        <a href="" onclick="showAllLoans();return false;" data-label="/loanforms.html" aria-label="Go to Form Support Page" data-category="Loans">
                                             <img class="loantype-title-back image-flip" src="./images/arrow-right.png" alt="Back arrow" width="32">
                                         </a>
                                     </div>
