--- a/components/header.html
+++ b/components/header.html
@@ -84,32 +84,32 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/" id="guides" onclick="setContent('guides');return false;" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
+                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:quiz" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Quiz" aria-level="1">
+                            <a href="/" id="quiz" onclick="setContent('quiz');return false;" class="page-link" data-label="/quiz.html" aria-label="Go to Farm Loan Quiz Page" data-category="Quiz">
                                 <div class="mm-nav-link">
-                                    <div class="mm-top-level-title">Guides</div>
+                                    <div class="mm-top-level-title">Farm Loan Quiz</div>
                                 </div>
                             </a>
                         </li>
-                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/" id="eligibility" onclick="setContent('eligibility');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:explore" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Readiness" aria-level="1">
+                            <a href="/" id="explore" onclick="setContent('explore');return false;" class="page-link" data-label="/explore.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                 <div class="mm-nav-link">
-                                    <div class="mm-top-level-title">Eligibility Self-Assessment</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/" id="discovery" onclick="setContent('discovery');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
-                                <div class="mm-nav-link">
-                                    <div class="mm-top-level-title">Loan Discovery</div>
+                                    <div class="mm-top-level-title">Explore Loans </div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:walkthrough" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Walkthrough"
                             aria-level="1">
-                            <a href="/" id="support" onclick="setContent('support');return false;" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
+                            <a href="/" id="loanforms" onclick="setContent('loanforms');return false;" class="page-link" data-label="/walkthrough.html" aria-label="Go to Loan Forms Page" data-category="Loans">
                                 <div class="mm-nav-link">
-                                    <div class="mm-top-level-title">Form Support</div>
+                                    <div class="mm-top-level-title">Loan Forms</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:quiz" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="guides" aria-level="1">
+                            <a href="/" id="guides" onclick="setContent('guides');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Guides Tool" data-category="guides">
+                                <div class="mm-nav-link">
+                                    <div class="mm-top-level-title">About FSA Farm Loans</div>
                                 </div>
                             </a>
                         </li>
@@ -147,7 +147,7 @@
                 <div class="mm-top-section-container">
                     <div class="mm-search">
                         <div id="search-field-mobile">
-                            <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
+                            <form class="search" action="loanforms.html" data-drupal-form-fields="affiliate,header-search">
                                 <div role="search" aria-label="Mobile Site Search">
                                     <input name="utf8" type="hidden" value="✓">
                                     <input id="affiliatename-mobile" name="affiliate" type="hidden" value="Application Form Search">
@@ -162,11 +162,11 @@
                         </div>
                     </div>
                     <div class="mm-top-section">
-                        <a class="mm-mobile-top-nav home" href="/" id="support" onclick="setContent('support');return false;">Home</a>                               
-                        <a class="mm-mobile-top-nav home" href="/" id="guides" onclick="setContent('guides');return false;">Guides</a>
-                        <a class="mm-mobile-top-nav home" href="/" id="eligibility" onclick="setContent('eligibility');return false;">Eligibility Assessment</a>
-                        <a class="mm-mobile-top-nav home" href="/" id="discovery" onclick="setContent('discovery');return false;">Loan Discovery</a>
-                        <a class="mm-mobile-top-nav home" href="/" id="support" onclick="setContent('support');return false;">Form Support</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="home" onclick="setContent('home');return false;">Home</a>                               
+                        <a class="mm-mobile-top-nav home" href="/" id="quiz" onclick="setContent('quiz');return false;">Farm Loan Quiz</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="explore" onclick="setContent('explore');return false;">Explore Loans </a>
+                        <a class="mm-mobile-top-nav home" href="/" id="loanforms" onclick="setContent('loanforms');return false;">Loan Forms</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="guides" onclick="setContent('guides');return false;">About FSA Farm Loans</a>
                     </div>
                 </div>
                 <div class="mm-utility-nav">
@@ -195,3 +195,5 @@
         </a>
     </div>
 </div>
+
+<script src="js/farmers.min.js"></script>
