--- a/components/quiz.html
+++ b/components/quiz.html
@@ -206,17 +206,23 @@ input[type="radio"]:focus {
 <script>
     var questionHistory = []; // List of nextQuestionId values
     var questionHistoryIndex = -1;
-    var questionType = ";"
+    var questionType = ""
     var currentQuestion = -1;
     var nextQuestionId = -1;
     var answers = [];
+    var conditionals = [];
 
     (function() {
         currentQuestion = 0;
         if(geAnswers() !== ""){
             questionHistory = JSON.parse(geAnswers());
             // Set the current question based on last unanswered question
-            currentQuestion = Math.max.apply(null, questionHistory.map(object => { return object.nextQuestionId; }));
+            if(isNaN(questionHistory[0]['nextQuestionId'])) {
+                currentQuestion = 0;
+            }
+            else{
+                currentQuestion = Math.max.apply(null, questionHistory.map(object => { return object.nextQuestionId; }));
+            }
         }
 
         showQuestion(currentQuestion);
@@ -226,7 +232,11 @@ input[type="radio"]:focus {
     // Quiz Logic
     //////////////////
     // Shows question
-    function showQuestion(questionId) {        
+    function showQuestion(questionId) {      
+        console.log(questionHistory)
+        if(isNaN(nextQuestionId)) {
+            window.open(nextQuestionId);
+        }       
         $.getJSON("../quiz.json", function(data) {
             $.each(data["questions"], function(key, questionData) {
                 if(questionData['questionId'] === questionId){
@@ -243,7 +253,6 @@ input[type="radio"]:focus {
                         questionHistory[questionHistoryIndex] = answer();
                     }
                     else {
-
                         answers = questionHistory[index]['answer'];
                         nextQuestionId = questionHistory[index]['nextQuestionId'];
                     }
@@ -278,7 +287,7 @@ input[type="radio"]:focus {
     function saveAndNext() {
         // Get list of answers from the multi select mnswers
         if(questionType == "multiselect") {
-            if(answers.findIndex(x => x.question !== -1) > -1) {
+            if(answers.findIndex(x => x.value !== -1) > -1) {
                 var multiAnswers = [];
                 for ( var i = 0; i < answers.length; i++ ) { 
                     multiAnswers.push(answers[i]['value']);
@@ -326,7 +335,7 @@ input[type="radio"]:focus {
         $('#quiz-next-inactive').hide();
         $('#quiz-next-active').hide();
 
-        if(nextQuestionId >= 0 ) {
+        if(nextQuestionId >= 0 || isNaN(nextQuestionId)) {
             $('#quiz-next-active').show();
         }
         else {
@@ -419,6 +428,20 @@ input[type="radio"]:focus {
         $('#quiz-questions-container').empty();
         $('#quiz-questions-container').append(question);
    
+        // Conditionals structure "1&2:12,1&3:1,2&3:2"
+        // value&value:questionId
+        var tmpConditionals = questionData['conditionals'].split(",");
+        for ( var i = 0; i < tmpConditionals.length; i++ ) {
+            var tmpCondition = tmpConditionals[i].split(":");
+            var values = tmpCondition[0].split("&");
+            var condition = {
+                "value1": values[0],
+                "value2": values[1],
+                "nextQuestionId": tmpCondition[1]
+            }
+            conditionals.push(condition)
+        }
+
         let data = questionHistory.find(x => x.question === currentQuestion);
         var checkboxesAll = [];
         checkboxesAll = [...question.querySelectorAll('input[type="checkbox"]')];        
@@ -481,38 +504,61 @@ input[type="radio"]:focus {
     }
 
     function setMultiSelectAnswers(option, checkbox) {
-        var answer = { value: option['value'], nextQuestionId: option['nextQuestionId'] };
-
         $(checkbox).change(function() {
             if(this.checked) {
+                nextQuestionId = option['nextQuestionId'];
+
+                if(option['url'] !== "") {
+                    nextQuestionId = option['url'];
+                }
+                else {
+                    nextQuestionId = option['nextQuestionId'];
+                }
+
+                var answer = { value: option['value'], nextQuestionId: nextQuestionId };
                 answers.push(answer);
+                
                 var selectedCheckbox = checkbox.closest(".quiz-multiSelect-card-container");
                 selectedCheckbox.classList.remove("quiz-multiSelect-card-container");
                 selectedCheckbox.classList.add("quiz-multiSelect-card-container-selected");
-
             }
-            else
-            {
+            else {
                 var selectedCheckbox = checkbox.closest(".quiz-multiSelect-card-container-selected");
                 selectedCheckbox.classList.remove("quiz-multiSelect-card-container-selected");
                 selectedCheckbox.classList.add("quiz-multiSelect-card-container");
                 var index = answers.findIndex(x => x.value === option['value']);
                 answers.splice(index, 1);
+                if(answers.length === 0) {
+                    nextQuestionId = -1;
+                }
+                else {
+                    nextQuestionId = answers[0]['nextQuestionId'];
+                }
             }
-        
-            highestValue = Math.max.apply(null, answers.map(object => { return object.value; }));
-
-            if (answers.length !== 0 ) {
-                nextQuestionId = answers.find(x => x.value === highestValue).nextQuestionId;
-                if ( nextQuestionId === -Infinity ) { nextQuestionId = -1; }
-            }
-            else {
-                nextQuestionId = -1;
-            }
+            
+            checkConditionals();
             setNextLinkValues();
         });
     }
 
+    function checkConditionals() {
+        if(conditionals.length !==0) {
+            for ( var i = 0; i < conditionals.length; i++ ) { 
+                var hasValue1 = answers.some( x => x.value == parseInt(conditionals[i]['value1']));
+                var hasValue2 = answers.some( x => x.value == parseInt(conditionals[i]['value2']));
+
+                if(hasValue1 && hasValue2) {
+                    nextQuestionId = parseInt(conditionals[i]['nextQuestionId']);
+                }
+            }
+            var index = answers.findIndex(x => isNaN(x.nextQuestionId));
+
+            if (index >= 0) {
+                nextQuestionId = parseInt(answers[index]['nextQuestionId']);
+            }
+        }
+    }
+    
     ////////////////////////////
     // Single-select card elements
     ////////////////////////////
@@ -618,18 +664,18 @@ input[type="radio"]:focus {
     function _createSingleSelectItems(options) {
         var gridDiv = document.createElement("div");
         for ( var i = 0; i < options.length; i++ ) {
-            if((options[i]) != "") {
-                var cardDiv = document.createElement("div");
-                cardDiv.append(_createRadioButtons(options[i]));
-                gridDiv.append(cardDiv);
+            if(options[i]["optionId"] !== -1) { 
+                gridDiv.append(_createRadioButtons(options[i]));
+                //gridDiv.append(cardDiv);
             }
         }
         return gridDiv;
     }
 
     function _createRadioButtons(option) {
-        var div = document.createElement("label");
+        var div = document.createElement("div");
         var label = document.createElement("label");
+        var labelText = document.createElement("p");
         var radio = document.createElement("input");
         radio.type = "radio";
         radio.name = "radio";
@@ -642,8 +688,9 @@ input[type="radio"]:focus {
             $(this).off('click');
         });
         
-        label.textContent = option.title
-        div.appendChild(radio);
+        labelText.textContent = option.title
+        label.appendChild(radio);
+        label.appendChild(labelText);
         div.appendChild(label);
 
         return div;
@@ -675,9 +722,8 @@ input[type="radio"]:focus {
     function _createYesNoItems(options) {
         var buttonDiv = document.createElement("div");
         buttonDiv.classList.add("btn-group");
-
         for ( var i = 0; i < options.length; i++ ) {
-            if(options[i] !== "") { 
+            if(options[i]["optionId"] !== -1) { 
                 buttonDiv.append(_createYesNoButtons(options[i]));
             }
         }
