starting summary page

--- a/components/home.html
+++ b/components/home.html
@@ -19,7 +19,7 @@
 
                             </div>
                         </div>
-                        <button class="btn lg-btn" onclick="window.location.assign('/lrt.html')">
+                        <button class="btn lg-btn" onclick="setContent('quiz')">
                             TAKE FARM LOAN QUIZ
                         </button>
                     </div>
@@ -57,11 +57,6 @@
         checkboxDiv.appendChild(label);
         return checkboxDiv;  
     }
-
-    // <label for="vehicle1"><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"> 
-    //                                 
-    //                             </label> <br>
-
 
     function toggleButtonActive () {
     
