--- a/components/explore.html
+++ b/components/explore.html
@@ -1,15 +1,37 @@
 <div class="fit-content">
-    <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <section class="mdl-stepper">
-                        <div class="mdl-grid">
-                            <div class="mdl-cell mdl-cell--12-col">
- Explore
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
+    <div class="container" id="container">
+
     </div>
+</div>
+
+<script>
+    (function() {
+        $.getJSON("/forms/loantypes.json", function(data) {
+            var container = document.createElement("div");
+            // recomended.classList.add("recomended-loans-container");
+            console.log(data)
+            for (var i = 0; i < data.length; i++) {
+                div = document.createElement("div");
+                var p = document.createElement("p");
+                p.textContent = data[i].name;
+                div.append(p);
+                p = document.createElement("p");
+                p.textContent = data[i].description;
+                div.append(p);
+                p = document.createElement("p");
+                p.textContent = data[i].name;
+                div.append(p);
+                p = document.createElement("p");
+                p.textContent = "Maximum Dollar Amount";
+                div.append(p);
+                p = document.createElement("p");
+                p.textContent = data[i].maximumDollarAmount;
+                div.append(p);
+                
+                //div.classList.add("summary-step-text-button-container");
+                container.append(div);
+            }
+            $('#container').empty();
+            $('#container').append(container);
+        });
+    })();
